--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "color-conversion",
   "displayName": "color-conversion",
-  "description": "",
+  "description": "vscode 颜色转换插件",
+  "publisher": "fredu",
+  "repository": "https://github.com/fred-hu/vscode-color-conversion",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.54.0"
