--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "publisher": "fredu",
   "repository": "https://github.com/fred-hu/vscode-color-conversion",
   "version": "0.0.4",
-  "keywords": ["vscode", "plugin", "color", "color change", "color convert", "color conversion"],
+  "keywords": [
+    "vscode",
+    "plugin",
+    "color",
+    "color change",
+    "color convert",
+    "color conversion"
+  ],
   "engines": {
     "vscode": "^1.54.0"
   },
@@ -69,5 +76,8 @@
     "mocha": "^8.2.1",
     "typescript": "^4.1.3",
     "vscode-test": "^1.5.0"
+  },
+  "dependencies": {
+    "jsdom": "^24.1.0"
   }
 }
